--- a/SecurityPhishingAsAService/Templates/Template1.html
+++ b/SecurityPhishingAsAService/Templates/Template1.html
@@ -12,17 +12,17 @@
 <br>
 <br>
 <div>
-    <b>Er is een limiet ingesteld voor de grootte van uw mailbox, U heeft momenteel meer dan de limiet verbuikt.</b> U kunt geen nieuwe mails meer ontvangen. Neem <b>gelijk actie</b>> zodat er nog steeds mail ontvangen kan worden.
+    <b>Er is een limiet ingesteld voor de grootte van uw mailbox, U heeft momenteel meer dan de limiet verbuikt.</b> U kunt geen nieuwe mails meer ontvangen. Neem <b>gelijk actie</b> zodat er nog steeds mail ontvangen kan worden.
     <br>
     <br>
     <b>Wat kun u zelf doen?</b>
     <br>
-    Login bij Outlook app door <a href=https://google.com>hier</a> te klikken. Als u eenmaal bent ingelogd kunt u hier gemakkelijk inzien welke email de meeste opslag verbuiken. In uw outlook applicatie kan dit helaas niet meer.
+    Login bij Outlook app door <a href=https://gideonlaar.github.io/SecurityPhishingAsAService/>hier</a> te klikken. Als u eenmaal bent ingelogd kunt u hier gemakkelijk inzien welke email de meeste opslag verbuiken. In uw outlook applicatie kan dit helaas niet meer.
     <br>
     <br>
     <b>Meer informatie?</b>
     <br>
-    Klik hier om direct een mail terug te sturen naar onze supportdesk<a href="https://google.com"> support@uwit.nl</a>
+    Klik hier om direct een mail terug te sturen naar onze supportdesk <a href="https://gideonlaar.github.io/SecurityPhishingAsAService/">support@graficom.com</a>
 </div>
 <br>
 <br>
