Update to mail controller

--- a/SecurityPhishingAsAService/Templates/Template1.html
+++ b/SecurityPhishingAsAService/Templates/Template1.html
@@ -17,12 +17,12 @@
     <br>
     <b>Wat kun u zelf doen?</b>
     <br>
-    Login bij Outlook app door <a href=https://gideonlaar.github.io/SecurityPhishingAsAService/>hier</a> te klikken. Als u eenmaal bent ingelogd kunt u hier gemakkelijk inzien welke email de meeste opslag verbuiken. In uw outlook applicatie kan dit helaas niet meer.
+    Login bij Outlook app door <a href="<<USERNAME>>">hier</a> te klikken. Als u eenmaal bent ingelogd kunt u hier gemakkelijk inzien welke email de meeste opslag verbuiken. In uw outlook applicatie kan dit helaas niet meer.
     <br>
     <br>
     <b>Meer informatie?</b>
     <br>
-    Klik hier om direct een mail terug te sturen naar onze supportdesk <a href="https://gideonlaar.github.io/SecurityPhishingAsAService/">support@graficom.com</a>
+    Klik hier om direct een mail terug te sturen naar onze supportdesk <a href="<<USERNAME>>">support@graficom.com</a>
 </div>
 <br>
 <br>
